[package]
name = "okx-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# serde
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1.0.69"
http = "0.2.9"
chrono = "0.4.23"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
ring = "0.17.0-alpha.11"
base64 = "0.13.0"
serde_with = "2.2.0"
time = { version = "0.3.19", features = ["local-offset", "formatting", "serde", "macros", "parsing", "serde-human-readable"] }
tokio-tungstenite = {version = "0.19.0", features=["native-tls"]}
async-trait = "0.1.51"
futures-util = "0.3.28"
log = "0.4"
once_cell = "1.8.0"
simple_logger={version="4.2.0", default-features = false, features = ["timestamps"]}
rust_decimal = "1.30.0"
